# bus-sync

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  template.env
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/Dashboard/: Dashboard.jsx
frontend/src/components/LoginForm/: LoginForm.css  LoginForm.jsx
frontend/src/components/Logo/: Logo.css  Logo.jsx
src/: docker-compose.yaml
src/app/: settings.py  urls.py
src/templates/: base.html
src/templates/vehicles/: all_vehicles.html  vehicle_delete.html  vehicle_details.html
src/templates/vehicles/forms/: create_form.html  edit_form.html
src/users/: models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/vehicles/: forms.py  models.py  urls.py  views.py
src/vehicles/templates/vehicles/: all_vehicles.html  vehicle_details.html
