[tool.poetry]
name = "bus-sync"
version = "0.0.1"
description = "Bus Fleet Management System"
authors = ["Filip Lapinski"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
